[package]
name = "gateway"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = {  version = "0.3", features = ["json", "env-filter"] }
serde_json = "1"
chrono = "0.4.19"
bytes = "1"

