[package]
name = "learnsqlite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = { version = "0.28.0", features = ["bundled"] }
uuid = {version = "1.3.0" ,features = [
    "v4",                
    "fast-rng",          
    "macro-diagnostics",]}